--- a/app/src/scss/style.scss
+++ b/app/src/scss/style.scss
@@ -1,5 +1,3 @@
-@import "../../../node_modules/swiper/swiper-bundle";
-
 .page {
   height: 100%;
 }
@@ -14,12 +12,18 @@
   height: 100%;
 }
 
-.header {
-  flex: 0 0 auto;
-}
-
 .main {
   flex: 1 0 auto;
+}
+
+.wrapper {
+  width: 40%;
+}
+
+.button {
+  font-family: inherit;
+  border: none;
+  cursor: pointer;
 }
 
 .footer {
