--- a/app/src/scss/dark-mode.scss
+++ b/app/src/scss/dark-mode.scss
@@ -2,8 +2,59 @@ $background-color: #171717;
 $dark-font-color: #e7e7e7;
 
 $pastel-purple: #b1a2ca;
+$blue: #597bc5;
+
+$blue-gradient: #43cbff;
+$violet-gradient: #af0ced;
 
 .dark-mode {
   background-color: $background-color;
   color: $dark-font-color;
+}
+
+.dark-mode {
+  .home {
+    &__title {
+      background-color: $blue;
+      background-image: linear-gradient(
+        45deg,
+        $violet-gradient,
+        $blue-gradient
+      );
+      background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+  }
+
+  .socials {
+    &__link {
+      border: 2px solid $blue;
+
+      &:hover {
+        box-shadow: 1px 1px 1px $violet-gradient;
+      }
+    }
+  }
+
+  .skills {
+    &__title {
+      border-bottom-color: $blue;
+    }
+  }
+
+  .description {
+    margin: 0 auto;
+
+    .work {
+      &__title {
+        border-bottom-color: $violet-gradient;
+      }
+    }
+
+    .about {
+      &__title {
+        border-bottom-color: $violet-gradient;
+      }
+    }
+  }
 }
