--- a/app/src/scss/header.scss
+++ b/app/src/scss/header.scss
@@ -14,12 +14,13 @@
 
   &__link {
     display: inline-block;
+    font-family: "JetBrains Mono", monospace;
     color: inherit;
     text-decoration: none;
-    padding: 10px;
+    padding: 20px;
   }
 
   &__button {
-    margin: 10px;
+    margin: 20px;
   }
 }
