--- a/app/src/scss/projects.scss
+++ b/app/src/scss/projects.scss
@@ -3,11 +3,10 @@
 
   &__title {
     text-transform: uppercase;
-  }
-}
-
-.project-card {
-  &__link {
-    display: block;
+    font-size: 2em;
+    line-height: 1.2em;
+    padding-bottom: 8px;
+    border-bottom-width: 2px;
+    border-bottom-style: solid;
   }
 }
