--- a/app/src/scss/skills.scss
+++ b/app/src/scss/skills.scss
@@ -11,8 +11,8 @@
   }
 
   .skills-wrapper {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
   }
 
   .skill-list {
