--- a/app/src/scss/header.scss
+++ b/app/src/scss/header.scss
@@ -11,16 +11,21 @@
   list-style: none;
   padding: 0;
   margin: 0;
+  font-family: "JetBrains Mono", monospace;
 
   &__link {
     display: inline-block;
-    font-family: "JetBrains Mono", monospace;
     color: inherit;
     text-decoration: none;
     padding: 20px;
   }
 
   &__button {
-    margin: 20px;
+    text-transform: uppercase;
+    margin: 15px 10px;
+    padding: 5px 10px;
+    color: inherit;
+    font-family: inherit;
+    border-radius: 20px;
   }
 }
